# nosyagent

./: .env.sample  .gitignore  LICENSE  README.md  agent.py  cli.py  companion.py  config.py  nosy_bot.py  pyproject.toml  reminder_scheduler.py  semantic_memory.py  storage.py  worker.py
data/: companion_cards.json
templates/: __init__.py  document.html
